--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -1,11 +1,49 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin:0;
+    padding:0;
+    box-sizing:border-box; 
 }
 body{
-    background: skyblue;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    background: #f1f5f8;
+    color: #222;
 }
-img{
-    width: 20rem;
+.bookList{
+    width: 90vw;
+    max-width: 1170px;
+    display: grid;
+    margin: 2% 5%;
+    
+    gap: 2rem;
+}
+@media screen and (min-width:768px) {
+    .bookList{
+        grid-template-columns: repeat(3,1fr);
+        align-items: center;
+    } 
+}
+.book{
+    background: #fff;
+    border-radius: 1rem;
+    padding: 2rem;
+    text-align: center;
+}
+
+.book img{
+    width: 100%;
+    object-fit: cover;
+}
+.book h2{
+    margin-top: 1rem;
+    font-size: 1rem;
+}
+.book h4{
+    color:#617d98;
+     font-Size:0.75rem;
+    margin-top:0.5rem;
+    letter-spacing: 2px; 
+
+}
+.book{
+    margin: 1rem 0.5rem;
 }
